--- a/03_basic_concepts/colored-triangle.html
+++ b/03_basic_concepts/colored-triangle.html
@@ -130,5 +130,14 @@
         return shader;  
     }
 </script>
-
+/* if (centroide_x >= 0 && centroide_y >= 0.0) {
+    colors.push([1.0, 0.0, 0.0])
+} else if (centroide_x < 0 && centroide_y < 0) {
+    colors.push([0.0, 1.0, 0.0])
+} else if (centroide_x < 0 && centroide_y >= 0) {
+    colors.push([0.0, 0.0, 1.0])
+} else {
+    colors.push([1.0, 1.0, 0.0])
+}
 </html>
+
