--- a/03_basic_concepts/colored-triangle.html
+++ b/03_basic_concepts/colored-triangle.html
@@ -20,9 +20,9 @@
 </script>
 
 <script id="shaderFs" type="x-shader/x-fragment">
-    varying highp vec4 v_Color;
+    uniform vec4 a_Color;
     void main() {
-        gl_FragColor = v_Color;
+        gl_FragColor = a_Color;
     }
 </script>
 
@@ -130,14 +130,6 @@
         return shader;  
     }
 </script>
-/* if (centroide_x >= 0 && centroide_y >= 0.0) {
-    colors.push([1.0, 0.0, 0.0])
-} else if (centroide_x < 0 && centroide_y < 0) {
-    colors.push([0.0, 1.0, 0.0])
-} else if (centroide_x < 0 && centroide_y >= 0) {
-    colors.push([0.0, 0.0, 1.0])
-} else {
-    colors.push([1.0, 1.0, 0.0])
-}
+
 </html>
 
