--- a/Prácticas/ejercicio4 - Félix Martínez.html
+++ b/Prácticas/ejercicio4 - Félix Martínez.html
@@ -63,9 +63,12 @@
             // Vertices
             var dim = 3;
             var vertices = new Float32Array([
-                0, -0.2, 0,  // Base
-                -0.15, -0.8, 0, 
-                0.15, -0.8, 0, 
+                0.08, -0.2, 0,  // Base 1
+                -0.08, -0.2, 0, 
+                -0.08, -0.8, 0,
+                0.08, -0.2, 0, // Base 2
+                0.08, -0.8, 0,
+                -0.08, -0.8, 0,
                 0, 0.1, 0, // 1era capa
                 -0.40, -0.46, 0,
                 0.40, -0.46, 0,
