--- a/Prácticas/ejercicio6 - Félix Martínez Alonso.html
+++ b/Prácticas/ejercicio6 - Félix Martínez Alonso.html
@@ -9,21 +9,23 @@
 
     <script id="shaderVs" type="x-shader/x-vertex">
         attribute vec4 a_Position;
-        attribute vec3 a_Color;
+        attribute vec2 a_TexCoord;
         uniform mat4 u_pMatrix;
         uniform mat4 u_vMatrix;
         uniform mat4 u_mvMatrix;
-        varying highp vec4 v_Color;
+        varying vec2 v_TexCoord;
         void main() {
             gl_Position = u_pMatrix * u_vMatrix * u_mvMatrix * a_Position;
-            v_Color = vec4(a_Color, 1.0);
+            v_TexCoord = a_TexCoord;
         }
     </script>
 
     <script id="shaderFs" type="x-shader/x-fragment">
-        varying highp vec4 v_Color;
-        void main() {
-            gl_FragColor = v_Color;
+        precision mediump float;
+        uniform sampler2D u_Sampler;
+        varying vec2 v_TexCoord;
+        void main(void) {
+            gl_FragColor = texture2D(u_Sampler, v_TexCoord);
         }
     </script>
 
@@ -55,6 +57,8 @@
 
             // Set clear canvas color
             gl.clearColor(0.0, 0.0, 0.0, 1);
+
+            initTexturesAndDraw(gl);
 
             // Hidden surface removal
             gl.enable(gl.DEPTH_TEST);
@@ -125,25 +129,25 @@
             // Vertexes and colors  (X, Y, Z, R, G, B)
             var vertexesAndColors = [
                	// Cubo
-                -0.3, -0.6, -0.3,   0.502, 0.251, 0, // v0 
-                0.3, -0.6, -0.3,    0.502, 0.251, 0, // v1 
-                0.3, 0.1, -0.3,       0.502, 0.251, 0, // v2 
-                -0.3, 0.1, -0.3,      0.502, 0.251, 0, // v3
+                -0.3, -0.6, -0.3,   
+                0.3, -0.6, -0.3,    
+                0.3, 0.1, -0.3,       
+                -0.3, 0.1, -0.3,      
 
-                -0.3, -0.6, 0.3,    0.502, 0.251, 0, // v4 
-                0.3, -0.6, 0.3,     0.502, 0.251, 0, // v5 
-                0.3, 0.1, 0.3,        0.502, 0.251, 0, // v6 
-                -0.3, 0.1, 0.3,       0.502, 0.251, 0, // v7 
+                -0.3, -0.6, 0.3,    
+                0.3, -0.6, 0.3,     
+                0.3, 0.1, 0.3,        
+                -0.3, 0.1, 0.3,       
 
-                -0.3, -0.6, -0.3,   0.502, 0.251, 0, // v8 
-                -0.3, 0.1, -0.3,      0.502, 0.251, 0, // v9 
-                -0.3, 0.1, 0.3,       0.502, 0.251, 0, // v10 
-                -0.3, -0.6, 0.3,    0.502, 0.251, 0, // v11
+                -0.3, -0.6, -0.3,    
+                -0.3, 0.1, -0.3,      
+                -0.3, 0.1, 0.3,       
+                -0.3, -0.6, 0.3,    
 
-                0.3, -0.6, -0.3,    0.502, 0.251, 0, // v12 
-                0.3, 0.1, -0.3,       0.502, 0.251, 0, // v13 
-                0.3, 0.1, 0.3,        0.502, 0.251, 0, // v14 
-                0.3, -0.6, 0.3,     0.502, 0.251, 0, // v15
+                0.3, -0.6, -0.3,    
+                0.3, 0.1, -0.3,       
+                0.3, 0.1, 0.3,        
+                0.3, -0.6, 0.3,     
 
                 -0.3, -0.6, -0.3,   0.502, 0.251, 0, // v16
                 -0.3, -0.6, 0.3,    0.502, 0.251, 0, // v17 
@@ -291,11 +295,11 @@
 
             var vertexPositionAttribute = gl.getAttribLocation(gl.program, "a_Position");
             gl.enableVertexAttribArray(vertexPositionAttribute);
-            gl.vertexAttribPointer(vertexPositionAttribute, 3, gl.FLOAT, false, 4 * (3 + 3), 0);
+            gl.vertexAttribPointer(vertexPositionAttribute, 3, gl.FLOAT, false, 4 * (2 + 2), 0);
 
             var vertexColorAttribute = gl.getAttribLocation(gl.program, "a_Color");
             gl.enableVertexAttribArray(vertexColorAttribute);
-            gl.vertexAttribPointer(vertexColorAttribute, 3, gl.FLOAT, false, 4 * (3 + 3), 4 * 3);
+            gl.vertexAttribPointer(vertexColorAttribute, 2, gl.FLOAT, false, 4 * (2 + 2), 4 * 2);
 
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, gl.createBuffer());
             gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(indexes), gl.STATIC_DRAW);
