--- a/Prácticas/ejercicio6 - Félix Martínez Alonso.html
+++ b/Prácticas/ejercicio6 - Félix Martínez Alonso.html
@@ -162,7 +162,7 @@
                 // Piramides
 
                 // Base1
-                -0.7, 0.01, -0.7,  
+                -0.7, 0.01, -0.7,   
                 -0.7, 0.01, 0.7,   
                 0.7, 0.01, 0.7,    
                 0.7, 0.01, -0.7,    
@@ -303,6 +303,23 @@
 
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, gl.createBuffer());
             gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(indexes), gl.STATIC_DRAW);
+        }
+
+        function initTexturesAndDraw(gl) {
+
+            var image0 = new Image();
+            image0.src = 'light.jpg';
+            var image1 = new Image();
+            image1.src = 'tree.gif';
+
+            image0.onload = function () {
+                loadTexture(gl, "u_Sampler0", image0, 0, true);
+                image1.onload = function () {
+                    loadTexture(gl, "u_Sampler1", image1, 1, true);
+                    drawScene(gl);
+                };
+            };
+
         }
 
         function toRadian(g){
