--- a/Prácticas/Blockout.html
+++ b/Prácticas/Blockout.html
@@ -25,7 +25,7 @@
 
         /* Crear cámara, posición y lookAt */
         var camera = new THREE.PerspectiveCamera(90, sceneWidth / sceneHeight, 0.02, 100);
-        camera.position.set(0, -10, 14);
+        camera.position.set(0, -15, 16);
         camera.lookAt(scene.position);
 
         /* Crear renderizador con antialias activado, y dandole dimensiones y sombras activadas */
@@ -55,6 +55,9 @@
             lightDirectional.shadow.mapSize.width = 4096;
             lightDirectional.shadow.mapSize.height = 4096;
             scene.add(lightDirectional);
+
+            var light = new THREE.AmbientLight(0xFFFFFF, 0.3);
+            scene.add(light);
         }
 
         /* Funcion que crea una esfera con textura de madera y la añade a la escena */
@@ -97,8 +100,10 @@
             scene.add(mesh);
         }
 
+        /* Funcion que crea los bordes con texturas de madera y los añade a la escena */
         function addBorders(scene, render) {
-            const geometryTop = new THREE.BoxGeometry( 25, 1, 4 );
+
+            const geometryTop = new THREE.BoxGeometry( 26, 1, 3 );
             var texture = new THREE.TextureLoader().load("Wood069_1K_Color.jpg", render);
             var textureD = new THREE.TextureLoader().load("Wood069_1K_Displacement.jpg", render);
             var textureR = new THREE.TextureLoader().load("Wood069_1K_Roughness.jpg", render);
@@ -111,12 +116,41 @@
                 map: textureN2,
                 map: texture
             });
+
+            /* Borde de arriba */
             var mesh = new THREE.Mesh(geometryTop, material);
             mesh.receiveShadow = true; /* Activar que reciva sombra */
-            mesh.position.y = 11;
-            mesh.position.z = 0.1;
+            mesh.position.y = 12.5;
+            mesh.position.z = 1.5;
             scene.add(mesh);
 
+            const geometrySides = new THREE.BoxGeometry( 1, 25, 3 );
+            var texture = new THREE.TextureLoader().load("Wood069_1K_Color.jpg", render);
+            var textureD = new THREE.TextureLoader().load("Wood069_1K_Displacement.jpg", render);
+            var textureR = new THREE.TextureLoader().load("Wood069_1K_Roughness.jpg", render);
+            var textureN = new THREE.TextureLoader().load("Wood069_1K_NormalGL.jpg", render);
+            var textureN2 = new THREE.TextureLoader().load("Wood069_1K_NormalDX.jpg", render);
+            var material = new THREE.MeshPhysicalMaterial({
+                map : textureD,
+                map: textureN,
+                map: textureR,
+                map: textureN2,
+                map: texture
+            });
+
+            /* Borde de la izquierda */
+            var mesh = new THREE.Mesh(geometrySides, material);
+            mesh.receiveShadow = true; /* Activar que reciva sombra */
+            mesh.position.x = -12.5;
+            mesh.position.z = 1.5;
+            scene.add(mesh);
+
+            /* Borde de la derecha */
+            var mesh = new THREE.Mesh(geometrySides, material);
+            mesh.receiveShadow = true; /* Activar que reciva sombra */
+            mesh.position.x = 12.5;
+            mesh.position.z = 1.5;
+            scene.add(mesh);
         }
 
         /* Funcion de inicio */
